--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tryghost/mobiledoc-kit",
+  "name": "@bugfix/mobiledoc-kit",
   "version": "0.11.1-ghost.5",
   "description": "A toolkit for building WYSIWYG editors with Mobiledoc",
   "repository": "https://github.com/bustle/mobiledoc-kit",
